tests/ui/udp_no_parent.stderr
error[E0599]: the method `into_boxed_bytes` exists for struct `Stacked<Udp, [u8; 4]>`, but its trait bounds were not satisfied
 --> tests/ui/udp_no_parent.rs:6:15
  |
6 |     let p = x.into_boxed_bytes();
  |               ^^^^^^^^^^^^^^^^ method cannot be called on `Stacked<Udp, [u8; 4]>` due to unsatisfied trait bounds
  |
 ::: src/lib.rs
  |
  | pub struct Stacked<U: Protocol, L: Protocol> {
  | --------------------------------------------
  | |
  | doesn't satisfy `_: IntoBoxedBytes`
  | doesn't satisfy `_: IsSafeToWrite`
  |
  = note: the following trait bounds were not satisfied:
          `Stacked<crabnet::transport::Udp, [u8; 4]>: IsSafeToWrite`
          which is required by `Stacked<crabnet::transport::Udp, [u8; 4]>: IntoBoxedBytes`
          `&Stacked<crabnet::transport::Udp, [u8; 4]>: IsSafeToWrite`
          which is required by `&Stacked<crabnet::transport::Udp, [u8; 4]>: IntoBoxedBytes`
          `&mut Stacked<crabnet::transport::Udp, [u8; 4]>: IsSafeToWrite`
          which is required by `&mut Stacked<crabnet::transport::Udp, [u8; 4]>: IntoBoxedBytes`

error[E0599]: the method `into_boxed_bytes` exists for struct `Udp`, but its trait bounds were not satisfied
 --> tests/ui/udp_no_parent.rs:9:15
  |
9 |     let p = x.into_boxed_bytes();
  |               ^^^^^^^^^^^^^^^^ method cannot be called on `Udp` due to unsatisfied trait bounds
  |
 ::: src/transport/mod.rs
  |
  | pub struct Udp {
  | --------------
  | |
  | doesn't satisfy `crabnet::transport::Udp: IntoBoxedBytes`
  | doesn't satisfy `crabnet::transport::Udp: IsSafeToWrite`
  |
  = note: the following trait bounds were not satisfied:
          `crabnet::transport::Udp: IsSafeToWrite`
          which is required by `crabnet::transport::Udp: IntoBoxedBytes`
          `&crabnet::transport::Udp: IsSafeToWrite`
          which is required by `&crabnet::transport::Udp: IntoBoxedBytes`
          `&mut crabnet::transport::Udp: IsSafeToWrite`
          which is required by `&mut crabnet::transport::Udp: IntoBoxedBytes`

warning: unused import: `crabnet::IntoBoxedBytes`
 --> tests/ui/udp_no_parent.rs:2:5
  |
2 | use crabnet::IntoBoxedBytes;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
